--- a/css/index.css
+++ b/css/index.css
@@ -4,20 +4,40 @@
   /* background-color: rgba(0, 0, 0, 0.1); */
 }
 
-.h1{
-  height: 10%;
-}
-.h8{
-  height: 80%;
-}
 
 .page{
   text-align: center;
 }
 .imformation{
   margin: 20px,auto;
-  max-width: 1000px;
+  width: 80%;
+  -webkit-box-shadow: 0 0 3px 2px rgba(0,0,0,.2);
+  box-shadow: 0 0 3px 2px rgba(0,0,0,.2);
+  padding: 0;
+}
+.imfo-left-nav{
+  width: 12%;
 }
 
-input{
+.imfo-left-nav .nav .block{
+  width: 100%;
+  margin: 0;
+}
+
+.imfo-message{
+  width: 88%;
+}
+.imfo-item{
+  border-bottom: 1px solid rgba(0,0,0,.2);
+}
+.imfo-message{
+  border-top:  0;
+  border-bottom:  0;
+  border-right:  0;
+}
+
+.title{
+  height: 100px;
+  font-size: 20px;
+  line-height: 100px;
 }
