--- a/css/mission.css
+++ b/css/mission.css
@@ -8,29 +8,29 @@
 .page{
   text-align: center;
 }
-.imformation{
+.information{
   margin: 20px,auto;
   width: 80%;
   -webkit-box-shadow: 0 0 3px 2px rgba(0,0,0,.2);
   box-shadow: 0 0 3px 2px rgba(0,0,0,.2);
   padding: 0;
 }
-.imfo-left-nav{
+.info-left-nav{
   width: 12%;
 }
 
-.imfo-left-nav .nav .block{
+.info-left-nav .nav .block{
   width: 100%;
   margin: 0;
 }
 
-.imfo-message{
+.info-message{
   width: 88%;
 }
-.imfo-item{
+.info-item{
   border-bottom: 1px solid rgba(0,0,0,.2);
 }
-.imfo-message{
+.info-message{
   border-top:  0;
   border-bottom:  0;
   border-right:  0;
